; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac_lomac/extr_mac_lomac.c_lomac_internalize_label.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac_lomac/extr_mac_lomac.c_lomac_internalize_label.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.label = type { i32 }
%struct.mac_lomac = type { i32 }

@MAC_LOMAC_LABEL_NAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.label*, i8*, i8*, i32*)* @lomac_internalize_label to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lomac_internalize_label(%struct.label* %0, i8* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.label*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.mac_lomac*, align 8
  %11 = alloca %struct.mac_lomac, align 4
  %12 = alloca i32, align 4
  store %struct.label* %0, %struct.label** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  %13 = load i32, i32* @MAC_LOMAC_LABEL_NAME, align 4
  %14 = load i8*, i8** %7, align 8
  %15 = call i64 @strcmp(i32 %13, i8* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %34

18:                                               ; preds = %4
  %19 = load i32*, i32** %9, align 8
  %20 = load i32, i32* %19, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %19, align 4
  %22 = load i8*, i8** %8, align 8
  %23 = call i32 @lomac_parse(%struct.mac_lomac* %11, i8* %22)
  store i32 %23, i32* %12, align 4
  %24 = load i32, i32* %12, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %18
  %27 = load i32, i32* %12, align 4
  store i32 %27, i32* %5, align 4
  br label %34

28:                                               ; preds = %18
  %29 = load %struct.label*, %struct.label** %6, align 8
  %30 = call %struct.mac_lomac* @SLOT(%struct.label* %29)
  store %struct.mac_lomac* %30, %struct.mac_lomac** %10, align 8
  %31 = load %struct.mac_lomac*, %struct.mac_lomac** %10, align 8
  %32 = bitcast %struct.mac_lomac* %31 to i8*
  %33 = bitcast %struct.mac_lomac* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %32, i8* align 4 %33, i64 4, i1 false)
  store i32 0, i32* %5, align 4
  br label %34

34:                                               ; preds = %28, %26, %17
  %35 = load i32, i32* %5, align 4
  ret i32 %35
}

declare dso_local i64 @strcmp(i32, i8*) #1

declare dso_local i32 @lomac_parse(%struct.mac_lomac*, i8*) #1

declare dso_local %struct.mac_lomac* @SLOT(%struct.label*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
